--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -1,5 +1,4 @@
 {% load static %}
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,7 +11,16 @@
     </div>
     <div id="subheader">
         <div class="cart">
-            Your cart is empty.
+            {% with total_items=cart|length %}
+                {% if total_items > 0 %}
+                    Your cart:
+                    <a href="{% url 'cart:cart_detail' %}">
+                        {{ total_items }} item{{ total_items|pluralize }}, ${{ cart.get_total_price }}
+                    </a>
+                {% elif not order %}
+                    Your cart is empty.
+                {% endif %}
+            {% endwith %}
         </div>
     </div>
     <div id="content">
